spacelab: fix navbar-search placeholder color and spacing

--- a/spacelab/bootswatch.less
+++ b/spacelab/bootswatch.less
@@ -44,6 +44,7 @@
 	.navbar-search .search-query,
 	.navbar-search .search-query:hover {
 		margin-bottom: 0;
+		line-height: normal;
 		color: @grayLight;
 		.placeholder(@grayLight);
 		.box-shadow(inset 0 1px 2px rgba(0, 0, 0, 0.5));
@@ -94,6 +95,14 @@
 			.nav-header {
 				color: @grayLighter;
 			}
+		}
+
+		.navbar-search .search-query,
+		.navbar-search .search-query:hover {
+
+			color: @white;
+
+			.placeholder(@grayLighter);
 		}
 	}
 }
